[package]
name = "skylark"
version = "0.2.0"
edition = "2021"

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }

[dependencies]
reqwest_wasi = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
chrono = "0.4"
redis = { version = "0.25.4", default-features = false, features = [
    "tokio-comp",
] }
lazy_static = "1.5.0"
k8s-openapi = { version = "0.23.0"}
bytes = "1.8.0"

[dev-dependencies]
k8s-openapi = { version = "0.23.0", features = ["v1_31"]}

[features]
__check = ["k8s-openapi/v1_31"]