[package]
name = "skylark_lib"
version = "0.3.627"
edition = "2021"


[dependencies]
reqwest_wasi = { version = "0.11", features = ["json"] }
tokio_wasi = { version = "1", features = ["full"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
lazy_static = "1.5.0"
redis_wasi = { version = "0.22.3", default-features = false, features = [
    "tokio-comp",
] }
