[package]
name = "evnt_preprocessor"
version = "0.1.1"
edition = "2021"

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }

[dependencies]
skylark = {path = "./skylark"}
axum = { version = "0.6", features = ["ws", "headers"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
image = "0.25.5"
base64 = "0.22.1"
sha2 = "0.10.6"
redis = "0.27.5"

[target.wasm32-wasi.dependencies]
wasi = { version = "0.10.2", optional = true }

