[package]
name = "ex_alarm"
version = "0.1.1"
edition = "2021"

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }

[dependencies]
skylark_lib = {path = "./skylark_lib"}
pretty_env_logger = "0.5.0"
rand = "0.8"
sha2 = "0.9"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.22"