[package]
name = "ex_client"
version = "0.2.206"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
tokio_wasi = { version = "1", features = ["full"] }
hyper_wasi = { version = "0.15.2", features = ["full"] }
reqwest_wasi = { version = "0.11.16", features = ["blocking", "stream"] }
log = "0.4.22"
rand = "0.8.5"
sha2 = "0.10.8"