[package]
name = "ex_firealarm"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }

[dependencies]
skylark = {path = "../../skylark"}
rand = "0.8"
sha2 = "0.9"
anyhow = "1.0"
bytes = "1"
axum = "0.6"
futures-util = "0.3.30"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25.4", default-features = false, features = [
    "tokio-comp",
] }
serde_json = "1.0.132"