[package]
name = "ex_preprocess"
version = "0.2.4"
edition = "2021"

[dependencies]
skylark_lib = { path = "./skylark_lib" }
pretty_env_logger = "0.5.0"
rand = "0.8"
sha2 = "0.9"
tokio_wasi = { version = "1", features = ["full"] }
hyper_wasi = { version = "0.15.2", features = ["full"] }
log = "0.4.22"
url = "2.5.3"
